Bug 295073 - kdevelop python crash when parsing scipy
Summary: kdevelop python crash when parsing scipy
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-29 15:45 UTC by pavel kropitz
Modified: 2013-04-07 22:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (10.72 KB, text/plain)
2012-02-29 15:45 UTC, pavel kropitz
Details
kdevelop output to console (33.35 KB, text/plain)
2012-02-29 15:48 UTC, pavel kropitz
Details
gdb kdevelop backtrace (3.28 KB, text/plain)
2012-02-29 16:33 UTC, pavel kropitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pavel kropitz 2012-02-29 15:45:51 UTC
Created attachment 69182 [details]
backtrace

Version:           git master (using KDE 4.8.0) 
OS:                Linux

sci-libs/scipy-0.9.0-r3


Reproducible: Always

Steps to Reproduce:
create file with content:

from scipy.io import loadmat


and wait a little to see the crash :(


Expected Results:  
not to crash.
Comment 1 pavel kropitz 2012-02-29 15:48:03 UTC
Created attachment 69183 [details]
kdevelop output to console
Comment 2 Sven Brauch 2012-02-29 16:24:33 UTC
I'll investigate this as soon as I find the time, thanks for reporting.
Could you please attach a backtrace in the future when reporting crashes? You can get one when running kdevelop through "gdb kdevelop", then running typing "backtrace" as soon as the program crashes (freezes).

Greetings
Comment 3 pavel kropitz 2012-02-29 16:33:48 UTC
Created attachment 69186 [details]
gdb kdevelop backtrace
Comment 4 Sven Brauch 2012-02-29 18:41:53 UTC
Git commit 64ebd88a754234912b0b7fc8da5b9d52dfd12963 by Sven Brauch.
Committed on 29/02/2012 at 19:18.
Pushed by brauch into branch 'master'.

Fix a crash when importing declarations
There's apparently another bug left with dotted imports (again),
will be fixed as soon as possible.

M  +10   -5    duchain/declarationbuilder.cpp

http://commits.kde.org/kdev-python/64ebd88a754234912b0b7fc8da5b9d52dfd12963
Comment 5 pavel kropitz 2012-03-01 00:44:01 UTC
thank you :)
Comment 6 Andreas Pakulat 2013-04-07 22:48:50 UTC
Move bugs in preparation of closing the component