Fix a crash when importing declarations

BUG:295073
There's apparently another bug left with dotted imports (again),
will be fixed as soon as possible.